crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-crawler
  namespace: crawler
  labels:
    app: synergychat-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-crawler
  template:
    metadata:
      labels:
        app: synergychat-crawler
    spec:
      volumes:
        - name: cache-volume
          emptyDir: {}
      containers:
        # 1) İlk container - 8080
        - name: synergychat-crawler-1
          image: bootdotdev/synergychat-crawler:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cache-volume
              mountPath: /cache

        # 2) İkinci container - 8081 (CRAWLER_PORT_2 -> CRAWLER_PORT)
        - name: synergychat-crawler-2
          image: bootdotdev/synergychat-crawler:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: cache-volume
              mountPath: /cache

        # 3) Üçüncü container - 8082 (CRAWLER_PORT_3 -> CRAWLER_PORT)
        - name: synergychat-crawler-3
          image: bootdotdev/synergychat-crawler:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
