testram-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synergychat-testram
  name: synergychat-testram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-testram

  template:
    metadata:
      labels:
        app: synergychat-testram
  
    spec:
      containers:
      - name: synergychat-testram
        image: bootdotdev/synergychat-testram:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
